Fix build issues.

--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="Extensomatic" basedir="." default="install">
 	
+	<property name="lein" value="C:\Documents and Settings\Howard Green\Desktop\Libraries\lein\lein.bat"/>
 	<property name="maven" value="C:\Documents and Settings\Howard Green\Desktop\Libraries\apache-maven-2.2.1\bin\mvn.bat" />
 	<property name="pom" value="pom.xml"/>
 	
@@ -18,10 +19,16 @@
 		</jar>
 	</target>
 
-	<target name="install" depends="extensomatic-jar">
+	<target name="pom" >
+		<exec executable="${lein}">
+			<arg value="pom"/>
+		</exec>
+	</target>
+
+	<target name="install" depends="extensomatic-jar,pom">
 		<exec executable="${maven}">
 			<arg value="install:install-file"/>
-			<arg value="-Dfile=${dest.dir}/${cjd.jar}"/>
+			<arg value="-Dfile=${dest.dir}/${extensomatic.jar}"/>
 			<arg value="-DpomFile=${pom}"/>
 		</exec>
 	
