--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="src/clojure"/>
 	<classpathentry kind="src" path="src/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_30"/>
 	<classpathentry kind="lib" path="lib/clojure-1.3.0.jar"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
