--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="clojure/|java/" kind="src" path="src"/>
-	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" path="src/clojure"/>
 	<classpathentry kind="src" path="src/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_30"/>
-	<classpathentry kind="lib" path="lib/clojure-1.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Documents and Settings/Howard Green/My Documents/CJD2/Extensomatic/classes"/>
+	<classpathentry kind="lib" path="C:/Documents and Settings/Howard Green/.m2/repository/org/clojure/clojure/1.4.0/clojure-1.4.0.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
